--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>agent-fit-saga</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Klunkaz</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <meta name="description" content="Klunkaz - Your Ultimate Platform" />
+    <meta name="author" content="Klunkaz" />
 
-    <meta property="og:title" content="agent-fit-saga" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Klunkaz" />
+    <meta property="og:description" content="Klunkaz - Your Ultimate Platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@klunkaz" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
